# omnigres

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  404.html  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  HACKING.md  LICENSE.pg  Makefile  README.md  devenv.nix  download-omnigres-extension.sh  flake.nix  generate-upgrades.sh  index.html  maintainer.py  mkdocs.base.yml  mkdocs.yml  next-pr.sh  pyproject.toml  requirements.txt  sitemap.xml  versions.txt
cmake/dependencies/: CMakeLists.txt  versions.cmake
dynpgext/: CMakeLists.txt  README.md  dynpgext.h  mkdocs.yml
dynpgext/docs/: intro.md  usage.md
dynpgext/test/: CMakeLists.txt  dynpgext_test--0.1.sql  dynpgext_test.c
extensions/: CMakeLists.txt  README.md  pg_doctest.hpp
extensions/omni/: .psqlrc  CHANGELOG.md  CMakeLists.txt  README.md  dshash.c  dshash.h  dshash_extras.h  extension.c  hook_harness.c  hook_types.h  init.c  mkdocs.yml  module.c  omni.c  omni_common.h  omni_memory.c  utils.c  workers.c
extensions/omni_access/: .psqlrc  CMakeLists.txt  README.md  policy-schema.json
extensions/omni_audit/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml
extensions/omni_auth/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  webauthn.cpp
extensions/omni_aws/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  omni_aws--0.1.sql
extensions/omni_cloudevents/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml
extensions/omni_codon/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  omni_codon.cpp
extensions/omni_containers/: CHANGELOG.md  CMakeLists.txt  README.md  init.c  mkdocs.yml  omni_containers--0.1.sql  omni_containers.c  omni_containers.h
extensions/omni_credentials/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml
extensions/omni_csv/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  omni_csv.cpp
extensions/omni_datasets/: CHANGELOG.md  CMakeLists.txt  README.md  cookiecutter.json  mkdocs.yml
extensions/omni_differential/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  omni_differential.cpp
extensions/omni_edbg/: CMakeLists.txt  README.md  omni_edbg.c
extensions/omni_email/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml
extensions/omni_ext/: CMakeLists.txt  README.md  control_file.c  control_file.h  db.c  db.h  hooks.c  init.c  mkdocs.yml  omni_ext.c  omni_ext.h  strverscmp.c  strverscmp.h  workers.c  workers.h
extensions/omni_http/: CMakeLists.txt  README.md  omni_http--0.1.sql  test.yml
extensions/omni_httpc/: CHANGELOG.md  CMakeLists.txt  README.md  ca-bundle.cc  ca-bundle.h  mkdocs.yml  omni_httpc--0.1.sql  omni_httpc.c  omni_httpc.h  ssl.c  ssl.h  test.yml
extensions/omni_httpd/: CHANGELOG.md  CMakeLists.txt  README.md  cascading_query.c  event_loop.c  event_loop.h  fd.c  fd.h  http_status_reasons.h  http_worker.c  http_worker.h  master_worker.c  mkdocs.yml  omni_httpd--0.1.sql  omni_httpd.c  omni_httpd.h  urlpattern.cpp  urlpattern.h
extensions/omni_id/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  uuidv7.c  uuidv7_stub.c
extensions/omni_json/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  omni_json--0.1.sql  table-mapping.schema.json
extensions/omni_kube/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  omni_kube.c
extensions/omni_ledger/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  omni_ledger.c
extensions/omni_manifest/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml
extensions/omni_mimetypes/: CMakeLists.txt  README.md  mkdocs.yml  omni_mimetypes--0.1.sql
extensions/omni_northwind/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml
extensions/omni_os/: .psqlrc  CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  omni_os.c
extensions/omni_polyfill/: CHANGELOG.md  CMakeLists.txt  README.md  arrays.c  mkdocs.yml  omni_polyfill.c  uuidv7.c
extensions/omni_prolog/: CMakeLists.txt  README.md  install.c  omni_prolog--0.1.sql  omni_prolog.c  omni_prolog.pl  predicates.h  stub.c
extensions/omni_proxy/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml
extensions/omni_python/: .psqlrc  CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  omni_python--0.1.sql  omni_python.c
extensions/omni_regex/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  omni_regex.c  pcre2.c
extensions/omni_rest/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml
extensions/omni_schema/: .psqlrc  CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  omni_schema--0.1.sql
extensions/omni_seq/: CHANGELOG.md  CMakeLists.txt  README.md  id.h  mkdocs.yml  omni_seq--0.1.sql  omni_seq--0.1.template.sql  omni_seq.c  prefix_seq.h  test.yml
extensions/omni_service/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml
extensions/omni_session/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml
extensions/omni_shmem/: CHANGELOG.md  CMakeLists.txt  README.md  apex_omni_shmem.h  mkdocs.yml  omni_shmem.cpp  tests.cpp
extensions/omni_signal/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  omni_signal.cpp
extensions/omni_sql/: CHANGELOG.md  CMakeLists.txt  README.md  deparse.c  deparse.h  deparse_13.c  deparse_14.c  deparse_15.c  deparse_16.c  deparse_17.c  deparse_18.c  deparse_19.c  lib.c  omni_sql--0.1.sql  omni_sql.c  omni_sql.h
extensions/omni_sqlite/: CHANGELOG.md  CMakeLists.txt  __generator.hpp  cppgres.hpp  mkdocs.yml  omni_sqlite.c  omni_sqlite.cpp  omni_sqlite.h  omni_sqlite_exec.c  (+6 more)
libgluepg_curl/: CMakeLists.txt  libgluepg_curl.c  libgluepg_curl.h
libgluepg_stc/: CMakeLists.txt  libgluepg_stc.h
libgluepg_yyjson/: CMakeLists.txt  libgluepg_yyjson.c  libgluepg_yyjson.h
libpgaug/: CMakeLists.txt  libpgaug.c  libpgaug.h
libpgext/: CMakeLists.txt  libpgext.c  libpgext.h
omni/: CMakeLists.txt  README.md  omni.h
pg_yregress/: .gitattributes  CHANGELOG.md  CMakeLists.txt  README.md  inja.cpp  inja.h  instance.c  mkdocs.yml  pg_yregress.c  pg_yregress.h  schema.json  sighandler.c  str.c  templated-test.yml  test.c  test.yml  test_omni_vfs.sql  uthash.h  yaml.c
tools/: CMakeLists.txt  check_extension_artifacts.py  package_extension_with_dependencies.py  test.py
(+1132 files in other folders)
