cmake_minimum_required(VERSION 3.25.1)
project(omnigres)

list(PREPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/../cmake)

enable_testing()

add_subdirectory(omni_ext)
add_subdirectory(omni_types)
add_subdirectory(omni_containers)
add_subdirectory(omni_http)
add_subdirectory(omni_httpd)
add_subdirectory(omni_httpc)
add_subdirectory(omni_sql)
add_subdirectory(omni_web)
add_subdirectory(omni_seq)
add_subdirectory(omni_mimetypes)
add_subdirectory(omni_vfs)
add_subdirectory(omni_schema)
add_subdirectory(omni_txn)
add_subdirectory(omni_python)
add_subdirectory(omni_json)
add_subdirectory(omni_xml)
